Bug 1444489 - Part VIII, Transition the visibility property instead of using transitionend event r=Gijs
Fades out all the UIs by applying CSS transition on opacity and visibility.
Stop relying on transitionend event to set the hidden state.

This removes a source of intermittent failure and while making sure UIs are
hidden.

MozReview-Commit-ID: FR7JQn4eO3X

UltraBlame original commit: 99fc41ec7ce98a3617b8dc4e5198fff23565cf6a

--- a/toolkit/themes/shared/media/videocontrols.css
+++ b/toolkit/themes/shared/media/videocontrols.css
@@ -2665,6 +2665,10 @@ opacity
 :
 0
 ;
+visibility
+:
+hidden
+;
 }
 .
 controlBar
@@ -2689,6 +2693,13 @@ Transitions
 /
 .
 clickToPlay
+:
+not
+(
+[
+immediate
+]
+)
 {
 transition
 -
@@ -2696,6 +2707,7 @@ property
 :
 transform
 opacity
+visibility
 ;
 transition
 -
@@ -2703,17 +2715,7 @@ duration
 :
 400ms
 400ms
-;
-}
-.
-controlsSpacer
-[
-fadeout
-]
-{
-opacity
-:
-0
+400ms
 ;
 }
 .
@@ -2733,31 +2735,9 @@ opacity
 :
 0
 ;
-}
-.
-clickToPlay
-[
-fadeout
-]
-[
-immediate
-]
-{
-transition
--
-property
+visibility
 :
-opacity
-background
--
-size
-;
-transition
--
-duration
-:
-0s
-0s
+hidden
 ;
 }
 .
@@ -2775,11 +2755,13 @@ transition
 property
 :
 opacity
+visibility
 ;
 transition
 -
 duration
 :
+200ms
 200ms
 ;
 }
@@ -2793,32 +2775,9 @@ opacity
 :
 0
 ;
-}
-.
-volumeStack
+visibility
 :
-not
-(
-[
-immediate
-]
-)
-{
-transition
--
-property
-:
-opacity
-margin
--
-top
-;
-transition
--
-duration
-:
-200ms
-200ms
+hidden
 ;
 }
 .
@@ -2836,17 +2795,20 @@ transition
 property
 :
 opacity
+visibility
 ;
 transition
 -
 duration
 :
 300ms
+300ms
 ;
 transition
 -
 delay
 :
+750ms
 750ms
 ;
 }
@@ -2870,6 +2832,10 @@ controlsSpacerStack
 opacity
 :
 0
+;
+visibility
+:
+hidden
 ;
 }
 /
